feat: category and product REST APIs
